# SDLFun

./: .gitignore  .travis.yml  AUTHOR  CMakeLists.txt  README.md  character.cpp  character.h  main.cpp  main.h  point.h  position.cpp  tags  timer.cpp  timer.h
data/: AUTHOR
data/images/: background.xcf  characters.xcf  tilesheet.xcf
src/: CMakeLists.txt  camera.h  character.cpp  character.h  engine.cpp  engine.h  hero.cpp  hero.h  main.cpp  map.cpp  map.h  mapcoherentnoiselayer.cpp  mapcoherentnoiselayer.h  mapcoherentnoisesection.cpp  mapcoherentnoisesection.h  mapfactory.cpp  mapfactory.h  maplayer.h  mapnoise.cpp  mapnoise.h  maprandompointsampler.cpp  maprandompointsampler.h  mapsection.h  mapuniformbinarynoiselayer.cpp  mapuniformbinarynoiselayer.h  mapuniformnoise.cpp  mapuniformnoise.h  point.h  point2d.h  position.cpp  position.h  rand.cpp  rand.h  rect2d.h  settings.h  tile.cpp  tile.h  timer.cpp  timer.h  velocity.cpp  (+3 more)
tests/unit/: CMakeLists.txt  MapCoherentNoiseSection  mapcoherentnoiselayer.cpp  mapcoherentnoisesection.cpp  mapnoise.cpp  maprandompointsampler.cpp  mapsection.cpp  mapuniformnoise.cpp  point2d.cpp  rect2d.cpp
